[package]
name = "bevy_sprite_sheet"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.12.1"
bevy_asset = "0.12.1"
bevy_ecs = "0.12.1"
bevy_render = "0.12.1"
bevy_reflect = "0.12.1"
bevy_reflect_derive = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bevy_common_assets = { version = "0.8.0", features = ["json"]}
pad = {git = "https://github.com/Warhorst/pad.git"}