[package]
name = "bevy_sprite_sheet"
version = "1.2.0"
edition = "2024"

[dependencies]
bevy_app = "0.18"
bevy_asset = "0.18"
bevy_ecs = "0.18"
bevy_render = "0.18"
bevy_image = "0.18"
bevy_reflect = "0.18"
bevy_reflect_derive = "0.18"
bevy_state = "0.18"
serde = { version = "1.0.137", features = ["derive"] }
bevy_common_assets = { version = "0.15", features = ["json"]}
pad = {git = "https://github.com/Warhorst/pad.git", tag = "1.3.0"}
